Auto factory + auto builder